gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-log_syntax.rs
fn main() {
    log_syntax!() // { dg-error ".E0658." "" { target *-*-* } }
}

